better some details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ArtisanMusic</string>
+    <string name="app_name">LCK Gramophone</string>
 
     <string name="about_name">1900</string>
     <string name="about_github">https://github.com/1900Star</string>
