change some icons

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">LCK Gramophone</string>
 
-    <string name="about_name">LMN</string>
-    <string name="about_github">https://github.com/1900Star</string>
+    <string name="about_name">L-M-N-L-M-N</string>
+    <string name="about_github">https://github.com/L-M-N-L-M-N</string>
     <string name="about_sign">O ever youthful, O ever weeping.</string>
     <string name="about_project_introduce">
 
        A special, simple and convenient music player.
     </string>
-    <string name="project_url">https://github.com/1900Star/SmartisanMusicPlayer</string>
+    <string name="project_url">https://github.com/L-M-N-L-M-N/LCK-Gramophone</string>
     <string name="project_introduce">Introduction</string>
 
     <string name="child_view_not">SwipeItemLayout Of subviews are not compliant</string>
@@ -61,7 +61,7 @@
     <string name="timing_close_play">Sleep Timer</string>
     <string name="edit_play_list">EditList</string>
     <string name="baidu_key">4502b57559</string>
-    <string name="app_info">LCK Gramophone A local music player modeled after the hammer music player. https://github.com/1900Star/SmartisanMusicPlayer </string>
+    <string name="app_info">LCK Gramophone A local music player modeled after the hammer music player. https://github.com/L-M-N-L-M-N/LCK-Gramophone </string>
     <string name="crash_log">CrashLog</string>
     <string name="take_photo">TakePicture</string>
     <string name="choice_photo">Gallery</string>
