--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,15 @@
 <resources>
-    <string name="app_name">LCK Gramophone</string>
+    <string name="app_name">LCK-Gramophone</string>
 
-    <string name="about_name">1900</string>
-    <string name="about_github">https://github.com/1900Star</string>
+    <string name="about_name">L-M-N-L-M-N</string>
+    <string name="about_github">https://github.com/L-M-N-L-M-N</string>
     <string name="about_sign">O ever youthful, O ever weeping.</string>
     <string name="about_project_introduce">
 
-       ArtisanMusicPlayer 仿照锤子音乐播放器写的一个本地音乐播放器，会尽可能的实现锤子音乐播放器已有的功能。
-        也会去除一些功能，比如去除:云音乐，联网搜索，因为主要还是播放本地音乐为主。 同时也会增加一些个人觉得有趣的交互，
-        比如增加了类似QQ音乐的左右滑动切换上/下一曲的交互。
-        \n\tRxJava\n\tRxBus\n\tButterknife\n\tGreenDao3.0\n\tGlide\n\tLeakcanary
+       LCK-Gramophone是仿照锤子音乐播放器写的一个本地音乐播放器，会尽可能的实现锤子音乐播放器已有的功能。
+        也会去除一些功能，比如去除:云音乐，联网搜索，主要还是播放本地音乐为主。
     </string>
-    <string name="project_url">https://github.com/1900Star/SmartisanMusicPlayer</string>
+    <string name="project_url">https://github.com/L-M-N-L-M-N/LCK-Gramophone</string>
     <string name="project_introduce">关于项目</string>
 
     <string name="child_view_not">SwipeItemLayout的子视图不符合规定</string>
@@ -24,7 +22,7 @@
     <string name="music_play_frequency">播放次数</string>
     <string name="music_score">评分</string>
     <string name="song_name">歌曲名</string>
-    <string name="play_list">播放列表</string>
+    <string name="play_list">歌单</string>
     <string name="music_artisan">艺术家</string>
     <string name="singer">歌手:</string>
     <string name="song_names">歌名:</string>
@@ -33,10 +31,10 @@
     <string name="album_tile">平铺</string>
     <string name="album_list">列表</string>
     <string name="random_play">随机播放</string>
-    <string name="add_new_play_list">新建播放列表</string>
-    <string name="add_to_play_list">加到播放列表</string>
+    <string name="add_new_play_list">新建歌单</string>
+    <string name="add_to_play_list">加到歌单</string>
     <string name="add_to_play_queue">加到播放队列</string>
-    <string name="rename_tile">重命名播放列表</string>
+    <string name="rename_tile">重命名歌单</string>
     <string name="load_music">正在拼命加载音乐,请稍候 -_-</string>
     <string name="cancel">取消</string>
     <string name="continues">继续</string>
@@ -64,7 +62,7 @@
     <string name="timing_close_play">定时关闭播放</string>
     <string name="edit_play_list">编辑列表</string>
     <string name="baidu_key">4502b57559</string>
-    <string name="app_info">ArtisanMusicPlayer 仿照锤子音乐播放器写的一个本地音乐播放器。 https://github.com/1900Star/SmartisanMusicPlayer </string>
+    <string name="app_info">LCK-Gramophone 仿照锤子音乐播放器写的一个本地音乐播放器。 https://github.com/L-M-N-L-M-N/LCK-Gramophone </string>
     <string name="crash_log">CrashLog</string>
     <string name="take_photo">拍照</string>
     <string name="choice_photo">从相册中选择照片</string>
